修改前端路径

--- a/annotation-sentence/src/main/resources/static/index.html
+++ b/annotation-sentence/src/main/resources/static/index.html
@@ -3,4 +3,4 @@
        "overflow-x":"auto",
        "overflow-y":"auto",
        "margin":"auto"
-     });</script><script type=text/javascript src=/static/js/manifest.d5230483e3c994121d1f.js></script><script type=text/javascript src=/static/js/vendor.712b63b5b50be4218e8d.js></script><script type=text/javascript src=/static/js/app.afb44645e14aa18ca108.js></script></body></html>
+     });</script><script type=text/javascript src=./static/js/manifest.d5230483e3c994121d1f.js></script><script type=text/javascript src=./static/js/vendor.712b63b5b50be4218e8d.js></script><script type=text/javascript src=./static/js/app.afb44645e14aa18ca108.js></script></body></html>
