提交前端代码

--- a/annotation-sentence/src/main/resources/static/index.html
+++ b/annotation-sentence/src/main/resources/static/index.html
@@ -3,4 +3,4 @@
        "overflow-x":"auto",
        "overflow-y":"auto",
        "margin":"auto"
-     });</script><script type=text/javascript src=/static/js/manifest.9ea1cddb81eaf4b9285d.js></script><script type=text/javascript src=/static/js/vendor.712b63b5b50be4218e8d.js></script><script type=text/javascript src=/static/js/app.6670098cd4086dd670d3.js></script></body></html>
+     });</script><script type=text/javascript src=./static/js/manifest.34fb2ec4128450eceb7f.js></script><script type=text/javascript src=./static/js/vendor.712b63b5b50be4218e8d.js></script><script type=text/javascript src=./static/js/app.31d7e44ff3b8e5646d7d.js></script></body></html>
